# NORM2-LSH

./: .gitignore  CMakeLists.txt  LSH.h  LinearScan.cpp  LinearScan.h  NH.h  data.h  list.cpp  list.h  main.cpp  p2h.cpp  result.h  test.cpp  test_data.cpp  util.cpp  util.h
data/Yelp/: config
data/gen2/: config
